--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,6 +29,7 @@
 .lockpicker-dialog {
   display: flex;
   flex-direction: column;
+  max-height: 80vh;
   width: 450px;
   margin: 10px 0;
   padding: 15px;
@@ -37,12 +38,26 @@
   will-change: opacity;
 }
 
+.lockpicker-title {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #6666;
+  font-size: 16pt;
+  font-weight: bold;
+}
+
 progress.lockpicker-progress {
   width: 100%;
+  margin-bottom: 5px;
+}
+
+.lockpicker-found-user-area {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .lockpicker-controls {
-  margin: 5px 0;
+  margin-top: 10px;
   text-align: right;
 }
 
